[gd_scene load_steps=4 format=3 uid="uid://ddkk6tcha4xi7"]

[ext_resource type="Script" uid="uid://dj636q0rwehqm" path="res://scenes/SceneManager/title_screen.gd" id="1_6dy41"]
[ext_resource type="Texture2D" uid="uid://it2q6m2go45v" path="res://assets/UI/title.png" id="1_d3ibl"]
[ext_resource type="FontFile" uid="uid://bc223e3sfn1ei" path="res://assets/Fonts/Kenney Pixel.ttf" id="2_8gecl"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6dy41")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("1_d3ibl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = 6.0
offset_right = 31.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8gecl")
text = "Start"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8gecl")
text = "Setting"
